Create NPCVendorIcon (png, webp), update Index.html

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1524,7 +1524,7 @@ const faqItems = [
       { src: "/assets/LearnOnPickupIcon.webp", text: "Loot to Unlock" },
       { src: "/assets/MeatWeekIcon.svg", text: "Meat Week Seasonal Event Reward" },
       { src: "/assets/MischiefNightIcon.svg", text: "Mischief Night Seasonal Event Reward" },
-      { src: "/assets/NPCVendorIcon.svg", text: "Sold by non-robot NPC vendor for Caps" },
+      { src: "/assets/NPCVendorIcon.webp", text: "Sold by non-robot NPC vendor for Caps" },
       { src: "/assets/PublicEventIcon.svg", text: "Non-seasonal Public Event Reward" },
       { src: "/assets/RobotVendorIcon.webp", text: "Sold by robot NPC vendor for Caps" },
       { src: "/assets/SeasonIcon.webp", text: "(Mini) Season S.C.O.R.E Reward" },
@@ -2146,7 +2146,7 @@ const multiVendorCategories = {
     prefixes: ['FreeStatesVendor', 'BrotherhoodVendor', 'RespondersVendor', 'RaiderVendor', 'WhitespringStationVendor', 'PendletonVendor']
   },
   NPCVendor: {
-    icon: '/assets/NPCVendorIcon.svg',
+    icon: '/assets/NPCVendorIcon.webp',
     prefixes: ['MacVendor', 'JuneSeaverVendor']
   }
 };
