--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -69,7 +69,7 @@
   }
 
   .placement-note {
-    margin: 4px 0 6px;
+    margin: 0px;
     font-size: 0.85rem;
     color: var(--text-muted);
   }
@@ -2087,9 +2087,10 @@ function renderResults(query) {
 
     // --- Placement Conditions header + pills ---
     const cnamUnlockText = {
-      '00424740': 'Unlock 2 or more',
-      '0042716B': 'Unlock 3 or more',
-      '0042716C': 'Unlock 4 or more'
+      '00424740': '(Unlock 2 or more)',
+      '0042716B': '(Unlock 3 or more)',
+      '0042716D': '(Unlock 3 or more)',
+      '0042716C': '(Unlock 4 or more)'
     };
 
     const hasBook = !!(r.BOOK_FULL && String(r.BOOK_FULL).trim());
@@ -2109,7 +2110,7 @@ function renderResults(query) {
         unlockNote.textContent = unlockText;
         right.appendChild(unlockNote);
       }
-      
+
 
       const condWrap = document.createElement('div');
       condWrap.className = 'inline-wrap';
