--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, C.A.M.P. budget costs, and allows searches.">
+  <meta name="description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches.">
   <meta property="og:title" content="Fallout 76 C.A.M.P. Item Database">
-  <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, C.A.M.P. budget costs, and allows searches.">
+  <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches.">
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/refs/heads/main/assets/CAMPIcon2.webp">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:type" content="website">
