--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -504,6 +504,7 @@
     scrollbar-color: var(--accent) var(--card-bg);
     transform: translateY(-6px);
     transition: transform 120ms ease-out, opacity 120ms ease-out;
+    overscroll-behavior: contain;
     opacity: 0;
   }
 
