--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -512,8 +512,8 @@
   }
 
   .modal-body {
-    max-height: 60vh;       /* adjust for header */
-    overflow-y: auto;       /* only this scrolls */
+    max-height: 60vh;       
+    overflow-y: auto;      
     padding: 10px 15px;
     scrollbar-width: thin;
     scrollbar-color: var(--accent) var(--card-bg);
