--- a/76Tools.html
+++ b/76Tools.html
@@ -161,7 +161,7 @@
       <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Database">
       <div class="tool-card-content">
         <h2>C.A.M.P. Item Database</h2>
-        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches.</p>
+        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches.</p>
         <a href="https://mrsblobby.github.io/CAMPCategorySearch/Index.html">Visit Tool</a>
       </div>
     </div>
@@ -170,7 +170,7 @@
       <img src="/assets/CoverImagePTS.png" alt="Fallout 76 C.A.M.P. Item Database (PTS)">
       <div class="tool-card-content">
         <h2>76 C.A.M.P. Item Database (PTS)</h2>
-        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement requirements, and allows searches (PTS-specific).</p>
+        <p>Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches (PTS-specific).</p>
         <a href="https://mrsblobby.github.io/CampCategorySearch-PTS/Index.html">Visit Tool</a>
       </div>
     </div>
@@ -186,7 +186,7 @@
   </main>
 
   <footer>
-    <p>Last Updated: November 2025</p>
+    <p>Last Updated: December 2025</p>
   </footer>
 </body>
 </html>
