--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -1478,7 +1478,8 @@ const ManualEntmIcons = {
   'DE2024_ScienceOfLove': '/assets/ChallengeIcon.svg',
 };
 const miniSeasonAliases = {
-  'SCORE_MiniSeason_2025_MMMFE': 'Marshal Mallow'
+  'SCORE_MiniSeason_2025_MMMFE': 'Marshal Mallow',
+  'SCORE_MiniSeason_Lovehurts': 'Love Hurts'
 };
 
 // --- Fetch DB ---
