--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -358,7 +358,7 @@
     }
 
     .changelog-entry {
-      background: rgba(255, 192, 15, 0.05);
+      background: var(--accent-dim);
       border-left: 3px solid var(--accent);
       border-radius: 4px;
       padding: 6px 12px;
@@ -685,17 +685,6 @@
     flex: 1;
   }
 
-  .filter-header {
-    font-weight: bold;
-    font-size: 15px;
-    text-align: center;
-    background-color: rgba(255, 192, 15, 0.1);
-    color: var(--accent);
-    padding: 4px 0;
-    margin: 0;
-    border-radius: 4px 4px 0 0;
-  }
-
   #filtersOptions button {
     padding: 6px 10px;
     border: 1px solid var(--accent);
@@ -735,7 +724,7 @@
     font-weight: bold;
     font-size: 13px;
     text-align: center;
-    background-color: rgba(255, 192, 15, 0.1); 
+    background-color: var(--accent-dim);
     color: var(--accent);
     padding: 2px 0;          
     margin: 0;
