--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -15,7 +15,7 @@
  <style>
   :root {
     --accent: #497ab4;
-    --accent-dim: #345a88;
+    --accent-dim: #223b5a;
     --bg: #1a1a1a;
     --card-bg: #2a2a2a;
     --text: #e0e0e0;
@@ -358,7 +358,7 @@
     }
 
     .changelog-entry {
-      background: rgba(255, 192, 15, 0.05);
+      background: var(--accent-dim);
       border-left: 3px solid var(--accent);
       border-radius: 4px;
       padding: 6px 12px;
@@ -685,16 +685,6 @@
     flex: 1;
   }
 
-  .filter-header {
-    font-weight: bold;
-    font-size: 15px;
-    text-align: center;
-    background-color: rgba(255, 192, 15, 0.1);
-    color: var(--accent);
-    padding: 4px 0;
-    margin: 0;
-    border-radius: 4px 4px 0 0;
-  }
 
   #filtersOptions button {
     padding: 6px 10px;
@@ -735,7 +725,7 @@
     font-weight: bold;
     font-size: 13px;
     text-align: center;
-    background-color: rgba(255, 192, 15, 0.1); 
+    background-color: var(--accent-dim);
     color: var(--accent);
     padding: 2px 0;          
     margin: 0;
