--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -358,7 +358,7 @@
     }
 
     .changelog-entry {
-      background: var(--accent-dim);
+      background: rgba(255, 192, 15, 0.05);
       border-left: 3px solid var(--accent);
       border-radius: 4px;
       padding: 6px 12px;
@@ -724,7 +724,7 @@
     font-weight: bold;
     font-size: 13px;
     text-align: center;
-    background-color: var(--accent-dim);
+    background-color: rgba(255, 192, 15, 0.05);
     color: var(--accent);
     padding: 2px 0;          
     margin: 0;
