--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1063,7 +1063,7 @@
       <div id="dropdownSelected">Item Name</div>
       <div id="dropdownOptions">
         <div class="option" data-value="name">Item Name</div>
-        <div class="option" data-value="book">Plan Name</div>
+        <div class="option" data-value="book">Plan/Challenge Name</div>
         <div class="option" data-value="entm">Entitlement Name</div>
       </div>
     </div>
@@ -1543,8 +1543,8 @@ const faqItems = [
     q: "What do the different search options mean?",
     a: [
       "Search by Item Name: Quite self-explanatory. Search results are based on the name of the item that is built.",
-      "Search by Plan Name: Search results are based on the plan name listed under Placement Conditions. This can come in handy if you want to see what a particular, more vague-sounding plan unlocks, i.e. Plan: Metal Signs.",
-      "Search by Entitlement Name: Similarly to the Plan Name option, this does essentially the same, but for Atomic Shop/S.C.O.R.E items. Entitlements act like account-wide plans used by these items."
+      "Search by Plan/Challenge Name: Search results are based on the plan/challenge name listed under Placement Conditions. This can come in handy if you want to see what a particular, more vague-sounding plan unlocks, i.e. Plan: Metal Signs.",
+      "Search by Entitlement Name: Similarly to the Plan/Challenge Name option, this does essentially the same, but for Atomic Shop/S.C.O.R.E items. Entitlements act like account-wide plans used by these items."
     ]
   },
    { 
