--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1660,9 +1660,11 @@ faqItems.forEach(item => {
   
     const label = document.createElement('span');
     label.textContent = iconData.text;
-    label.style.marginLeft = '10px';     // consistent gap
-    label.style.lineHeight = '1';
-    label.style.paddingTop = '10px';
+    label.style.marginLeft = '10px';
+    label.style.lineHeight = '1.3';
+    label.style.display = 'flex';
+    label.style.alignItems = 'center';
+    label.style.minHeight = '45px'; // same as iconBox height
     iconContainer.appendChild(label);
   
     iconWrapper.appendChild(iconContainer);
