--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -2366,7 +2366,7 @@ bookFulls.forEach((fullName, i) => {
 
     let tooltipText = getTooltipTextForTag(normalizedTag, tags);
     if (/Challenge_/.test(bookEditorId)) {
-      tooltipText = `Challenge: "${fullName}"`;
+      tooltipText = `Complete a Challenge to Unlock`;
       if (globValue != null) tooltipText += ` (X/${globValue})`;
     } else if (String(r.BOOK_SOURCE || '').toLowerCase() === 'learnbypickup') {
       tooltipText = `Loot to Unlock`;
