--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -2366,8 +2366,7 @@ bookFulls.forEach((fullName, i) => {
 
     let tooltipText = getTooltipTextForTag(normalizedTag, tags);
     if (/Challenge_/.test(bookEditorId)) {
-      tooltipText = `Challenge: "${fullName}"`;
-      if (globValue != null) tooltipText += ` (X/${globValue})`;
+      tooltipText = `Complete a Challenge to Unlock`;
     } else if (String(r.BOOK_SOURCE || '').toLowerCase() === 'learnbypickup') {
       tooltipText = `Loot to Unlock`;
     }
