--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -9,8 +9,8 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/refs/heads/main/assets/CAMPIcon2.webp">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/webp" sizes="32x32" href="/assets/CAMPIcon2.webp">
-  <link rel="icon" type="image/webp" sizes="16x16" href="/assets/CAMPIcon2.webp">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://mrsblobby.github.io/assets/CAMPIcon2-32x32.png">
+  <link rel="shortcut icon" type="image/png" href="https://mrsblobby.github.io/assets/CAMPIcon2-32x32.png">
   <title>Fallout 76 C.A.M.P. Item Database</title>
  <style>
   :root {
