--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="i9j6QbBtPE2Mc_no8ASj_4GYoC3KWi-K6PI0Py9X3l0" />
   <meta name="description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches.">
   <meta property="og:title" content="Fallout 76 C.A.M.P. Item Database">
   <meta property="og:description" content="Database Tool for Fallout 76 C.A.M.P. Items. Lists Workshop Menu categories, Plan/Entitlement/Challenge requirements, C.A.M.P. budget costs, and allows searches.">
