--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -960,7 +960,7 @@
           <ul>
               <li>
                   <div>
-                      Added technical info to each entry
+                      Added technical info to each entry <br>
                       Current known issue: certain budget values are being underreported
                   </div>
               </li>
