--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -945,7 +945,7 @@
       Made by <span class="author-name">MrsBlobby</span>
       <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other Tools</a>
     </p>
-    <p class="updated">Last Updated: December 27, 2025</p>
+    <p class="updated">Last Updated: January 14, 2026</p>
   </div>
 </div>
 
@@ -954,6 +954,17 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
+               <div class="changelog-entry">
+          <h4>v3.0.1</h4>
+          <ul>
+              <li>
+                  <div>
+                      Added technical info to each entry <br>
+                      Current known issue: certain budget values are being underreported
+                  </div>
+              </li>
+          </ul>
+      </div>
           <h4>v3.0</h4>
           <ul>
               <li>
@@ -2723,7 +2734,6 @@ if (r.CNAM_FormID || r.CNAM_EditorID) {
 
   right.appendChild(techWrap);
 }
-
 
 
     // --- attach left + right divs to li ---
