--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -103,7 +103,7 @@
   }
 
   .controls {
-    position: sticky;
+    position: flex;
     top: 0;
     z-index: 100;
     background: var(--bg);
@@ -113,10 +113,6 @@
     flex-direction: column;
     align-items: center;
     gap: 12px;
-  }
-
-  html, body {
-    overflow-y: auto;
   }
 
   .controls input[type="text"] {
