--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -14,9 +14,9 @@
   <link rel="shortcut icon" type="image/png" href="https://mrsblobby.github.io/assets/CAMPIcon2-32x32.png">
   <title>Fallout 76 C.A.M.P. Item Database</title>
  <style>
-  :root {
-    --accent: #ffc00f;
-    --accent-dim: #ffb300;
+  :root { 
+    --accent: #ffc00f; /*Live Color: #ffc00f, PTS Color: #497ab4 */
+    --accent-dim: #ffb300; /* Live Color: #ffb300, PTS Color: #223b5a*/
     --bg: #1a1a1a;
     --card-bg: #2a2a2a;
     --text: #e0e0e0;
@@ -364,7 +364,7 @@
       color: var(--accent);
     }
 
-    .changelog-entry {
+    .changelog-entry { /*Live Color: rgba(255, 192, 15, 0.05), PTS Color: rgba(15, 147, 255, 0.05); */
       background: rgba(255, 192, 15, 0.05);
       border-left: 3px solid var(--accent);
       border-radius: 4px;
@@ -965,7 +965,7 @@
               <li>
                   <div>
                       Fixed budget values being underreported, primarily affecting lights and prefabs <br>
-                      
+                      Whichever page is the current page is now better shown to the user
                   </div>
               </li>
           </ul>
@@ -1897,10 +1897,6 @@ function paginate(items) {
   return items.slice(start, end);
 }
 
-function scrollToTop() {
-  window.scrollTo({ top: 0, behavior: 'smooth' });
-}
-
 function renderPagination(totalItems) {
   const pagination = document.getElementById('pagination');
   const totalPages = Math.ceil(totalItems / itemsPerPage);
@@ -1917,11 +1913,10 @@ function renderPagination(totalItems) {
     if (i === 1 || i === totalPages || Math.abs(i - currentPage) <= 2) {
       const btn = document.createElement('button');
       btn.textContent = i;
-      if (i === currentPage) btn.classList.add('active-page'); // add class
+      if (i === currentPage) btn.classList.add('active-page'); // highlight current page
       btn.onclick = () => { 
         currentPage = i; 
         renderResults(document.getElementById('searchBox').value); 
-        scrollToTop(); // scroll after changing page
       };
       pagination.appendChild(btn);
     } else if (Math.abs(i - currentPage) === 3) {
@@ -1931,8 +1926,9 @@ function renderPagination(totalItems) {
     }
   }
 
+
   const nextBtn = document.createElement('button');
-  nextBtn.textContent = 'Next →';
+  nextBtn.textContent = 'Next';
   nextBtn.disabled = currentPage === totalPages;
   nextBtn.onclick = () => { currentPage++; renderResults(document.getElementById('searchBox').value); };
   pagination.appendChild(nextBtn);
