--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -650,7 +650,7 @@
     padding: 0 12px;
     font-size: 14px;
     width: 100%;
-    border: 2px solid var(--accent); /* keep border if you like */
+    border: 2px solid var(--accent); 
     border-radius: 6px 0 0 6px;
     background-color: var(--card-bg);
     color: var(--text);
@@ -1904,7 +1904,7 @@ function renderPagination(totalItems) {
   if (totalPages <= 1) return;
 
   const prevBtn = document.createElement('button');
-  prevBtn.textContent = '← Prev';
+  prevBtn.textContent = 'Prev';
   prevBtn.disabled = currentPage === 1;
   prevBtn.onclick = () => { currentPage--; renderResults(document.getElementById('searchBox').value); };
   pagination.appendChild(prevBtn);
